# linfa

./: .gitignore  Cargo.toml
algorithms/linfa-bayes/: Cargo.toml
algorithms/linfa-clustering/: Cargo.toml
algorithms/linfa-clustering/benches/: dbscan.rs  gaussian_mixture.rs  k_means.rs
algorithms/linfa-elasticnet/: Cargo.toml
algorithms/linfa-elasticnet/src/: algorithm.rs
algorithms/linfa-ensemble/: Cargo.toml
algorithms/linfa-ensemble/src/: adaboost.rs  adaboost_hyperparams.rs  hyperparams.rs  lib.rs
algorithms/linfa-ftrl/: Cargo.toml
algorithms/linfa-ftrl/benches/: ftrl.rs
algorithms/linfa-ftrl/src/: lib.rs
algorithms/linfa-hierarchical/: Cargo.toml
algorithms/linfa-ica/: Cargo.toml
algorithms/linfa-ica/benches/: fast_ica.rs
algorithms/linfa-ica/examples/: fast_ica.rs
algorithms/linfa-ica/src/: fast_ica.rs  lib.rs
algorithms/linfa-kernel/: Cargo.toml
algorithms/linfa-kernel/src/: inner.rs  lib.rs
algorithms/linfa-lars/: Cargo.toml
algorithms/linfa-lars/src/: algorithm.rs
algorithms/linfa-linear/: Cargo.toml
algorithms/linfa-logistic/: Cargo.toml
algorithms/linfa-nn/: Cargo.toml
algorithms/linfa-pls/: Cargo.toml
algorithms/linfa-preprocessing/: Cargo.toml
algorithms/linfa-reduction/: Cargo.toml
algorithms/linfa-svm/: Cargo.toml
algorithms/linfa-trees/: Cargo.toml
algorithms/linfa-tsne/: Cargo.toml
datasets/: Cargo.toml
datasets/src/: generate.rs
src/: correlation.rs  metrics_classification.rs
src/composing/: mod.rs  platt_scaling.rs  residual_chain.rs
src/dataset/: impl_dataset.rs  mod.rs
(+23 files in other folders)
