[package]
name = "linfa-ftrl"
version = "0.9.0-nuvai.1"
authors = ["Liudmyla Kyrashchuk <himila@tutanota.com>"]

description = "A Machine Learning framework for Rust"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ai", "ml", "ftrl"]
categories = ["algorithms", "mathematics", "science"]

[features]
serde = ["serde_crate", "linfa/serde", "ndarray/serde", "argmin/serde1"]
wasm-bindgen = ["argmin/wasm-bindgen"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
features = ["derive"]

[dependencies]
ndarray = { version = "0.17", features = ["serde"] }
ndarray-rand = "0.16"
argmin = { git = "https://github.com/Nuvai/argmin", branch = "feat/ndarray-0.17-upgrade", default-features = false }
argmin-math = { git = "https://github.com/Nuvai/argmin", branch = "feat/ndarray-0.17-upgrade", features = ["ndarray_v0_17-nolinalg"] }
thiserror = "2.0"
rand = "0.9"
rand_xoshiro = "0.7"

linfa = { version = "0.9.0-nuvai.1", path = "../.." }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
linfa-datasets = { version = "0.9.0-nuvai.1", path = "../../datasets", features = [
    "winequality",
] }
linfa = { version = "0.9.0-nuvai.1", path = "../..", features = ["benchmarks"] }

[[bench]]
name = "ftrl"
harness = false
